# 2025-fall-ICG-final-project

./: CMakeLists.txt  README.md  fragmentShader.frag  geometryShader.geom  main.cpp  playbook.txt  requirement.txt
NEW_HAND/: .gitignore  CMakeLists.txt  DEPENDENCIES.md  PRE_UPLOAD_CHECKLIST.md  QUICKSTART.md  README.md  SUMMARY.md  hand.mtl  playbook.txt
NEW_HAND/.github/workflows/: build.yml
NEW_HAND/include/: Camera.h  Mesh.h  Model.h  Shader.h
NEW_HAND/shaders/: manicure.fs  manicure.geom  manicure.vs
NEW_HAND/src/: Camera.cpp  Mesh.cpp  Model.cpp  Shader.cpp  main.cpp
hand_model/source/: female_hand.fbx
shaders/: manicure.geom  vertex.glsl
src/: main.cpp
src/shaders/: backgroundShader.frag  fragmentShader.frag  geometryShader.geom
windows_version/: ~$2_112550105.docx  ~WRL1844.tmp
windows_version/src/: main.cpp
windows_version/src/shaders/: fragmentShader.frag  geometryShader.geom  vertexShader.vert
